--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,13 +3,13 @@
 @tailwind utilities;
 
 :root {
-    --background: #ffffff;
+    --background: ##f9f9fb;
     --foreground: #171717;
 }
 
 [data-theme='dark'] {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --background: #171717;
+    --foreground: #f9f9fb;
 }
 
 body {
