--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -1,6 +1,6 @@
 .scene {
-    width: 200px;
-    height: 260px;
+    width: 300px;
+    height: 350px;
     margin: 40px 0;
     perspective: 600px;
 }
@@ -11,7 +11,6 @@
     transition: transform 1s;
     transform-style: preserve-3d;
     cursor: pointer;
-
     position: relative;
 }
 
@@ -23,15 +22,23 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    line-height: 260px;
     color: white;
     text-align: center;
     font-weight: bold;
-    font-size: 40px;
+    font-size: 18px;
     border-radius: 20px;
     backface-visibility: hidden;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+    box-sizing: border-box;
 }
-
+.card__face div {
+    line-height: 1.4;
+    text-align: center;
+}
 .card__face--front {
     background: rgb(226, 179, 179);
 }
