--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -1,17 +1,17 @@
 .scene {
     width: 350px;
     height: 450px;
-    margin: 40px 0;
     perspective: 600px;
+    margin: 40px 0;
 }
 
 .card {
     width: 100%;
     height: 100%;
-    transition: transform 1s;
+    position: relative;
+    transition: transform 1.3s;
     transform-style: preserve-3d;
     cursor: pointer;
-    position: relative;
 }
 
 .card.is-flipped {
@@ -22,25 +22,20 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    color: white;
-    text-align: center;
-    font-weight: bold;
-    font-size: 18px;
-    border-radius: 20px;
     backface-visibility: hidden;
-    overflow: hidden;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 10px;
-    gap: 20px;
+    border-radius: 20px;
+    padding: 20px;
     box-sizing: border-box;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    gap: 20px;
 }
-.card__face div {
-    line-height: 1.4;
-    text-align: center;
-}
+
 .card__face--front {
     background: rgb(226, 179, 179);
 }
@@ -48,4 +43,17 @@
 .card__face--back {
     background: rgb(178, 178, 220);
     transform: rotateY(180deg);
+}
+
+@keyframes rollout {
+    0% {
+        transform: translateY(-40px);
+    }
+    100% {
+        transform: translateY(0);
+    }
+}
+
+.roll-out {
+    animation: rollout 0.7s ease-out;
 }
