--- a/src/components/HexGallery/HexGallery.module.scss
+++ b/src/components/HexGallery/HexGallery.module.scss
@@ -1,9 +1,9 @@
 .hexagongallery {
     margin: 0 auto;
     margin-top: 50px;
-    max-width: 1000px;
+    max-width: 750px;
     display: grid;
-    grid-template-columns: repeat(8, 1fr);
+    grid-template-columns: repeat(3, 1fr);
     grid-auto-rows: 200px;
     grid-gap: 14px;
     padding-bottom: 50px;
@@ -24,9 +24,9 @@
 }
 
 .hex:hover {
-    background-color: #555; /* Цвет фона при наведении */
-    transform: scale(1.05); /* Увеличение размера при наведении */
-    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5); /* Тень вокруг элемента */
+    background-color: #555; 
+    transform: scale(1.05); 
+    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5); 
 }
 .hex:first-child {
     grid-row-start: 1;
@@ -71,16 +71,16 @@
     text-align: center;
     color: white;
     opacity: 0.2;
-    transition: opacity 0.3s; /* Плавный переход для появления текста */
+    transition: opacity 0.3s; 
 }
 
 .hex:hover .content {
-    opacity: 1; /* Показываем контент при наведении */
+    opacity: 1; 
 }
 
 .hexbutton {
     background-color: #fde186;
-    border: none;
+    border-radius: 5px;
     color: white;
     padding: 10px 20px;
     text-align: center;
@@ -96,7 +96,6 @@
     background-color: darkcyan;
 }
 
-/* Стили для заголовков и описаний */
 .title {
     font-size: 20px;
     margin: 0;
