--- a/src/ui/ProgressBar/ProgressBar.module.scss
+++ b/src/ui/ProgressBar/ProgressBar.module.scss
@@ -1,12 +1,15 @@
+@use 'sass:math';
+@use '@/styles/colors' as colors;
+
 .progress-bar {
     width: 350px;
-    background-color: #eee;
+    background-color: #{colors.$progressBarBackground};
     border-radius: 1.5rem;
     overflow: hidden;
 
     .progress-fill {
         height: 1.25rem;
-        background-color: #fde38c;
+        background-color: #{colors.$progressBarFill};
         transition: width 0.5s ease-in-out;
         border-radius: 1.5rem;
     }
