style: fix active link styling

--- a/src/shared/styles/colors.scss
+++ b/src/shared/styles/colors.scss
@@ -7,7 +7,7 @@ $hexDefault: #e2e8f0;
 $hexHover: #555;
 $hexHoverShadow: rgba(0, 0, 0, 0.5);
 $hexButtonBackground: #fde186;
-$hexButtonHoverBackground: darkcyan;
+$hexButtonHoverBackground: #9194a7;
 $hexContentColor: white;
 
 // Buttons
