--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -15,5 +15,6 @@
 body {
     color: var(--foreground);
     background: var(--background);
-    font-family: Arial, Helvetica, sans-serif;
+    /* font-family: Arial, Helvetica, sans-serif; */
+    font-family: var(--font-inter), sans-serif;
 }
