ref: edited styles

--- a/src/shared/styles/colors.scss
+++ b/src/shared/styles/colors.scss
@@ -30,3 +30,6 @@ $navLinkText: rgb(100, 116, 139);
 $navLinkHover: rgb(99, 102, 241);
 $navLinkActive: rgb(226, 232, 240);
 $navLinkActiveText: rgb(79, 70, 229);
+
+// Text
+$textDefaultColor: #6b7280;
