--- a/src/features/navigation/ui/NavigationMenu.module.scss
+++ b/src/features/navigation/ui/NavigationMenu.module.scss
@@ -18,8 +18,8 @@
     align-items: center;
     gap: 0.75rem;
     font-size: 0.875rem;
-    font-weight: 500;
-
+    font-weight: 400;
+    list-style: none;
     @media (min-width: 768px) {
         gap: 2rem;
     }
@@ -30,8 +30,9 @@
     border-radius: 9999px;
     padding: 0.375rem 1.25rem;
     color: colors.$navLinkText;
-
+    text-decoration: none;
     &:hover {
         color: colors.$navLinkHover;
+        font-weight: 500;
     }
 }
