--- a/src/app/styles/globals.scss
+++ b/src/app/styles/globals.scss
@@ -1,7 +1,8 @@
 /* @tailwind base;
 @tailwind components;
 @tailwind utilities; */
-@import '@/shared/styles/colors';
+
+@use '@/shared/styles/colors' as *;
 
 * {
     margin: 0;
