--- a/src/widgets/Header/ui/Header.module.scss
+++ b/src/widgets/Header/ui/Header.module.scss
@@ -1,6 +1,9 @@
 @use '@/shared/styles/colors' as *;
 
 .header {
+    position: sticky;
+    top: 0;
+    z-index: 1;
     display: flex;
     justify-content: center;
     padding-top: 1.5rem;
