feat: add CardViewer, ref card styles, edit arraypage

--- a/src/features/Card/ui/Card.module.scss
+++ b/src/features/Card/ui/Card.module.scss
@@ -17,11 +17,11 @@
     cursor: pointer;
 }
 
-.card.is-flipped {
+.card.isFlipped {
     transform: rotateY(180deg);
 }
 
-.card__face {
+.cardFace {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -37,13 +37,13 @@
     gap: 20px;
 }
 
-.card__face--front {
+.cardFaceFront {
     background: $cardFrontBackground;
     font-size: 24px;
     @include textPrimary($size: 24px);
 }
 
-.card__face--back {
+.cardFaceBack {
     background: $cardBackBackground;
     transform: rotateY(180deg);
     @include textPrimary();
@@ -58,6 +58,6 @@
     }
 }
 
-.roll-out {
+.rollOut {
     animation: rollout 0.7s ease-out;
 }
