--- a/src/shared/styles/colors.scss
+++ b/src/shared/styles/colors.scss
@@ -2,6 +2,7 @@
 $headerBackground: rgb(254, 240, 138);
 $headerBackgroundGradientFrom: rgba(255, 255, 255, 0.8);
 $headerBackgroundGradientTo: rgba(255, 255, 255, 0.2);
+$mobileMenuDarkBackground: #FEF4AB;
 
 // Cards
 $cardFrontBackground: rgb(226, 179, 179);
