ref: delete Tailwind CSS

--- a/src/app/styles/globals.scss
+++ b/src/app/styles/globals.scss
@@ -37,4 +37,6 @@ body {
     color: var(--foreground);
     background: var(--background);
     font-family: var(--font-inter), sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
