--- a/src/shared/styles/colors.scss
+++ b/src/shared/styles/colors.scss
@@ -37,3 +37,16 @@ $navLinkActiveText: rgb(79, 70, 229);
 
 // Text
 $textDefaultColor: #6b7280;
+
+// Dark Theme Colors
+$darkThemeBackground: #171717;
+$darkThemeForeground: #f9f9fb;
+$darkThemeHexBackground: #fef4a9;
+$darkThemeHexHover: #aaa;
+$darkThemeHexButtonBackground: #9194a7;
+$darkThemeHexButtonHoverBackground: #fde186b4;
+$darkThemeHexContentColor: #555;
+$darkThemeResetButtonBackground: #fef4a9;
+$darkThemeResetButtonHoverBackground: #fde186;
+$darkThemeResetButtonText: #171717;
+$darkThemeResetButtonBorder: #fde186;
